Fix footer text not centered vertically in container

--- a/src/main/webapp/styletemplate.css
+++ b/src/main/webapp/styletemplate.css
@@ -241,6 +241,7 @@ em {
 #footercontainer {
 	order: 3;
 	display: flex;
+	height: 50px;
 	overflow: hidden;
 	width: 100%;
 	background-color: rgb(50, 50, 50);
@@ -261,7 +262,7 @@ em {
 }
 
 #footer p {
-	
+	margin: 0;
 }
 
 @media screen and (max-device-width: 799px) {
